source code for former scangen has been added scipts for alignments downloads have been updated
Committer: Herve Rouault <rouault@lps.ens.fr>

On branch master
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

 new file:   AUTHORS
 new file:   COPYING
 modified:   ChangeLog
 new file:   INSTALL
 new file:   Makefile.am
 new file:   Makefile.in
 new file:   NEWS
 modified:   README
 new file:   TODO
 new file:   aclocal.m4
 new file:   autogen.sh
 new file:   autom4te.cache/output.0
 new file:   autom4te.cache/output.1
 new file:   autom4te.cache/output.2
 new file:   autom4te.cache/output.3
 new file:   autom4te.cache/output.4
 new file:   autom4te.cache/output.5
 new file:   autom4te.cache/output.6
 new file:   autom4te.cache/output.7
 new file:   autom4te.cache/requests
 new file:   autom4te.cache/traces.0
 new file:   autom4te.cache/traces.1
 new file:   autom4te.cache/traces.2
 new file:   autom4te.cache/traces.3
 new file:   autom4te.cache/traces.4
 new file:   autom4te.cache/traces.5
 new file:   autom4te.cache/traces.6
 new file:   autom4te.cache/traces.7
 new file:   autoscan.log
 new file:   config.h.in
 new file:   config.h.in~
 new file:   configure
 new file:   configure.ac
 new file:   configure.scan
 new file:   data/Makefile.am
 copied:     src/alignments/Makefile.in -> data/Makefile.in
 new file:   data/mapping.dat
 new file:   depcomp
 new file:   install-sh
 new file:   m4/ax_blas.m4
 new file:   missing
 new file:   py-compile
 new file:   scripts/Makefile.am
 copied:     src/alignments/Makefile.in -> scripts/Makefile.in
 new file:   scripts/python/Makefile.am
 new file:   scripts/python/Makefile.in
 new file:   scripts/python/mapping.py.in
 new file:   scripts/python/maskalignedgenomes.py.in
 new file:   scripts/sh/Makefile.am
 copied:     src/alignments/Makefile.in -> scripts/sh/Makefile.in
 new file:   scripts/sh/generate-droso-alignlist.sh.in
 new file:   scripts/sh/generate-eutherian-alignlist.sh
 new file:   src/.scange

--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-Test
+
+You can refer to the INSTALL file for installation instruction. In addition, some flags have to be added to support either drosophila genomes or eutherian genomes or both.
+
+I advice you not to use the default prefix for installation, which would pollute your /usr/local with imogene specific scripts. I would rather use something like (in the imogene folder) :
+mkdir build
+cd build
+../configure --enable-droso --prefix=$PWD/imogene
+
+Once the package is installed, the first thing to do is to download the required genomes. To help in that task, scripts have been added in the script folder.
+Create then a folder where to stock the alignments :
+mkdir align
+cd align
+../test/bin/generate-droso-alignlist.sh
