several minor updates in following files
 On branch master
 Your branch is behind 'origin/master' by 2 commits, and can be fast-forwarded.

 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   doc/imogene.texi
	modified:   src/Makefile.am
	new file:   src/imogene.cpp

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    src/alignments/Makefile.am
	deleted:    src/alignments/align.cpp
	deleted:    src/alignments/align.hpp
	deleted:    src/imogene-genmot.cpp

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -38,17 +38,16 @@ Software Foundation raise funds for GNU development.''
 @insertcopying
 @end titlepage
 
-@contents
-
-
 @c Output the table of contents at the beginning.
 @contents
+
 
 @ifnottex
 @node Top
 @top Imogene
 
-@insertcopying
+This manual is for Imogene
+(version @value{VERSION}, @value{UPDATED}).
 @end ifnottex
 
 @menu
@@ -61,20 +60,13 @@ Software Foundation raise funds for GNU development.''
 @node Generating motifs de novo
 @chapter Generating motifs de novo
 
-@cindex chapter, first
+@cindex motif, generation
 
-This is the first chapter.
-@cindex index entry, another
+This mode is selected by invoking @command{imogene genmot}
+on the command line. 
 
-Here is a numbered list.
+Here are the options :
 
-@enumerate
-@item
-This is the first item.
-
-@item
-This is the second item.
-@end enumerate
 
 @node Copying This Manual
 @appendix Copying This Manual
@@ -82,7 +74,6 @@ This is the second item.
 @c @menu
 @c * GNU Free Documentation License::  License for copying this manual.
 @c @end menu
-
 @include fdl.texi
 
 @node Index
