README and doc update
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   README
	modified:   doc/imogene.texi
	modified:   scripts/python/getalign-droso.py.in
	modified:   scripts/python/getalign-eutherian.py.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    src/alignments/Makefile.am
	deleted:    src/alignments/align.cpp
	deleted:    src/alignments/align.hpp

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -56,6 +56,23 @@ This manual is for Imogene
 * Index::
 @end menu
 
+@node Installation
+@chapter Installation
+
+@cindex installation
+
+The first step is to invoke the usual commands to install a package (once you have extracted to tarball)~:
+@command{mkdir build}
+@command{cd build}
+@command{../configure --prefix="install/full/path"}
+@command{make}
+@command{make install}
+
+
+This mode is selected by invoking @command{imogene genmot}
+on the command line. 
+
+Here are the options :
 
 @node Generating motifs de novo
 @chapter Generating motifs de novo
