--- a/README
+++ b/README
@@ -4,8 +4,8 @@ You can refer to the INSTALL file for installation instruction. In addition, som
 I advice you not to use the default prefix for installation, which would pollute your /usr/local with imogene specific scripts. I would rather use something like (in the imogene folder) :
 mkdir build
 cd build
-../configure --enable-droso --prefix=$PWD/imogene
+../configure --prefix=$PWD/install
 
 Once the package is installed, the first thing to do is to download the required genomes. To help in that task, scripts have been added in the script folder.
-execute $prefix/bin/generate-droso-align.py
+execute $prefix/bin/generate-droso-align.py (for drosophila genomes)
 Files will be automatically installed in $prefix/share/imogene
