texi menu update
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   doc/imogene.texi
	deleted:    src/alignments/Makefile.am
	deleted:    src/alignments/align.cpp
	deleted:    src/alignments/align.hpp

 Untracked files:
   (use "git add <file>..." to include in what will be committed)

	scripts/python/cython/

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -51,6 +51,7 @@ This manual is for Imogene
 @end ifnottex
 
 @menu
+* Installation:: 
 * Generating motifs de novo:: 
 * Copying This Manual::
 * Index::
