Modified getalign-eutherian.py.in so that it tries to import Cython, uses it if possible, else uses python for emf2fasta conversion.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   .gitignore
	modified:   doc/imogene.texi
	modified:   scripts/python/Makefile.am
	modified:   scripts/python/cython/test.py
	new file:   scripts/python/emf2fasta.pyx.in
	modified:   scripts/python/getalign-eutherian.py.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    scripts/python/cython/align
	deleted:    scripts/python/cython/align.cpp
	deleted:    scripts/python/cython/convert.c
	deleted:    scripts/python/cython/convert.pyx
	deleted:    scripts/python/cython/convert.so
	deleted:    scripts/python/cython/setup.py
	deleted:    scripts/python/cython/test

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -75,9 +75,9 @@ on the command line.
 
 Here are the options :
 
-@section{Alignment files download}
-@subsection{Eutherian}
-@subsection{Drosophilae}
+@section Alignment files download
+@subsection Eutherian
+@subsection Drosophilae
 
 @node Generating motifs de novo
 @chapter Generating motifs de novo
