--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -62,7 +62,7 @@ This manual is for Imogene
 
 @cindex installation
 
-The first step is to invoke the usual commands to install a package (once you have extracted to tarball)~:
+The first step is to invoke the usual commands to install a package (once you have extracted to tarball)@footnote{Note that if you use the development version from github, you have first to generate the configure script using @command{./autogen.sh}}~:
 @example 
 mkdir build
 cd build
@@ -71,17 +71,22 @@ make
 make install
 @end example
 
-
-This mode is selected by invoking @command{imogene genmot}
-on the command line. 
-
-Here are the options :
-
 @section Alignment files download
 
 @subsection Eutherian
 
 @subsection Drosophilae
+
+To download Drosophilae genomes, you have to execute the proper python script~:
+@command{python $PREFIX/lib/python-yourversion/site-packages/getalign-droso.py}
+
+@section Background sequences generation
+
+In order to compare the statistics of the sequences taken into account for motif generation, some background sequences need to be selected. Two options are offered to you~:
+@enumerate
+@item use the set of coordinates provided in the data folder
+@item generate a new set of coordinates
+@end enumerate
 
 @node Generating motifs de novo
 @chapter Generating motifs de novo
