--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
 
 
+extract : reintroduce extracttofasta in extract.cpp
+distinfo : reintroduce former function (to compute distances not clustering)
+
+find coding coordinates for mammals
+
 
