help and imogene structure updated
All the help must now go to dedicated files in doc (example : extract
mode help goes to doc/extract.texi)

 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   Makefile.am
	modified:   doc/Makefile.am
	new file:   doc/extract.texi
	modified:   doc/imogene.texi
	modified:   src/help.cpp
	modified:   src/help.hpp
	modified:   src/imogene.cpp

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -52,7 +52,8 @@ This manual is for Imogene
 
 @menu
 * Installation:: 
-* Generating motifs de novo:: 
+* genmot:: 
+* extract::
 * Copying This Manual::
 * Index::
 @end menu
@@ -88,7 +89,7 @@ In order to compare the statistics of the sequences taken into account for motif
 @item generate a new set of coordinates
 @end enumerate
 
-@node Generating motifs de novo
+@node genmot
 @chapter Generating motifs de novo
 
 @cindex motif, generation
@@ -97,6 +98,16 @@ This mode is selected by invoking @command{imogene genmot}
 on the command line. 
 
 Here are the options :
+
+@include extract.texi
+
+@c @include distinfo.texi
+
+@c @include genmot.texi
+
+@c @include scangen.texi
+
+@c @include help.texi
 
 
 @node Copying This Manual
