genmot sorting modified
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   doc/Makefile.am
	modified:   doc/imogene.texi
	new file:   doc/test.texi
	modified:   src/genmot.cpp

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -55,6 +55,7 @@ This manual is for Imogene
 * extract::
 * distinfo::
 * genmot:: 
+* test::
 * copying::
 * Index::
 @end menu
@@ -95,6 +96,8 @@ In order to compare the statistics of the sequences taken into account for motif
 @include distinfo.texi
 
 @include genmot.texi
+
+@include test.texi
 
 @c @include scangen.texi
 
