various modifs after install test
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   INSTALL
	modified:   Makefile.am
	modified:   configure.ac
	new file:   data/Makefile.am
	new file:   data/mapping.dat
	modified:   doc/install.texi
	modified:   src/distinfo.cpp
	modified:   src/genmot.cpp
	modified:   src/help.cpp

--- a/doc/install.texi
+++ b/doc/install.texi
@@ -1,10 +1,10 @@
 
-@node Installation
+@node install
 @chapter Installation
 
 @cindex installation
 
-The first step is to invoke the usual commands to install a package (once you have extracted to tarball)@footnote{Note that if you use the development version from github, you have first to generate the configure script using @command{./autogen.sh}:
+The first step is to invoke the usual commands to install a package (once you have extracted to tarball)@footnote{Note that if you use the development version from github, you have first to generate the configure script using @command{./autogen.sh}}:
 @example 
 mkdir build
 cd build
