created display mode.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   TODO
	new file:   examples/display/align.dat
	new file:   examples/display/motifs.txt
	new file:   examples/display/test.fa
	new file:   examples/genmot/align.dat
	new file:   examples/genmot/bestuniq-pval.dat
	new file:   examples/genmot/coords-six-proms-short.dat
	new file:   examples/genmot/coords-six-proms.dat
	new file:   examples/genmot/motmeldb.txt
	new file:   examples/genmot/test.fa
	modified:   src/Makefile.am
	modified:   src/commandlist.txt
	modified:   src/display.cpp
	new file:   src/display.ggo
	new file:   src/display.hpp
	modified:   src/imogene-scangen.cpp
	modified:   src/imogene.cpp
	modified:   src/tree.hpp

--- a/TODO
+++ b/TODO
@@ -14,4 +14,4 @@ display matrix in a human readable fashion
 
 Marc:
 - check mcmc sampling process
-
+-Add a simple script to launch background extraction
