--- a/doc/install.texi
+++ b/doc/install.texi
@@ -1,10 +1,10 @@
 
-@node Installation
+@node install
 @chapter Installation
 
 @cindex installation
 
-The first step is to invoke the usual commands to install a package (once you have extracted to tarball)@footnote{Note that if you use the development version from github, you have first to generate the configure script using @command{./autogen.sh}:
+The first step is to invoke the usual commands to install a package (once you have extracted to tarball)@footnote{Note that if you use the development version from github, you have first to generate the configure script using @command{./autogen.sh}}:
 @example 
 mkdir build
 cd build
@@ -29,3 +29,7 @@ In order to compare the statistics of the sequences taken into account for motif
 @item use the set of coordinates provided in the data folder
 @item generate a new set of coordinates
 @end enumerate
+
+@subsection Generate a new set of coordinates
+
+You have to execute the script @command{python $PREFIX/lib/python-yourversion/site-packages/getalign-droso.py}
