display mode documentation
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

 modified:   doc/Makefile.am
 new file:   doc/display.texi
 modified:   doc/imogene.texi

--- a/doc/imogene.texi
+++ b/doc/imogene.texi
@@ -55,6 +55,7 @@ This manual is for Imogene
 * extract::
 * distinfo::
 * genmot:: 
+* display:: 
 * test::
 * copying::
 * Index::
@@ -68,6 +69,8 @@ This manual is for Imogene
 @include distinfo.texi
 
 @include genmot.texi
+
+@include display.texi
 
 @include test.texi
 
