tex display improved.
 On branch master
 Changes to be committed:
	deleted:    data/align/back0_2L_40156_42156.fa
	deleted:    data/align/back1_2L_43482_45482.fa
	deleted:    data/align/back2_2L_64746_66746.fa
	deleted:    data/align/back3_2L_80158_82158.fa
	deleted:    data/align/back4_2L_87407_89407.fa
	deleted:    data/align/back5_2L_120271_122271.fa
	deleted:    data/align/back6_2L_126540_128540.fa
	deleted:    data/align/back7_2L_133936_135936.fa
	deleted:    data/align/back8_2L_159945_161945.fa
	deleted:    data/align/back9_2L_172392_174392.fa
	deleted:    example/extract/align/test_1_100072115_100072135.fa
	deleted:    example/extract/coords-eutherian.dat
	deleted:    example/extract/coords.dat
	deleted:    example/genmot/align.dat
	deleted:    example/genmot/bestuniq-pval.dat
	deleted:    example/genmot/coords-six-proms-short.dat
	deleted:    example/genmot/coords-six-proms.dat
	deleted:    example/genmot/motmeldb.txt
	deleted:    example/genmot/test.fa
	modified:   examples/display/align/test.fa
	new file:   examples/display/align/test1.fa
	modified:   examples/display/display/results.log
	modified:   examples/display/display/results.pdf
	new file:   examples/display/display/results.synctex.gz
	modified:   examples/display/display/results.tex
	modified:   examples/display/display/test.log
	modified:   examples/display/display/test.pdf
	modified:   examples/display/display/test.svg
	modified:   examples/display/display/test.tex
	new file:   examples/display/display/test1.aux
	new file:   examples/display/display/test1.log
	new file:   examples/display/display/test1.pdf
	new file:   examples/display/display/test1.svg
	new file:   examples/display/display/test1.tex
	new file:   examples/display/texput.log
	deleted:    scripts/python/extractbackground.py.in
	deleted:    scripts/python/get-epo-align.sh
	modified:   src/display.cpp
	modified:   src/extract.cpp

--- a/examples/display/display/results.tex
+++ b/examples/display/display/results.tex
@@ -8,10 +8,20 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-$>$MusMus	align/test.fa	chrunknown	100072115	100072135 \\
-\texttt{100072115	A\textit{\textcolor{red}{ATTCCGGAAT}} \textcolor{red}{ ($14$)} \textit{\textcolor{green}{TTTAATTCCG}} \textcolor{green}{ ($13$)} GAAT\textit{\textcolor{green}{TTTAATTCCG}} \textcolor{green}{ ($13$)} GAAT\textit{\textcolor{green}{TTT}}\\
-100072157	\textit{\textcolor{green}{AATTCCG}} \textcolor{green}{ ($13$)} GAAT\textit{\textcolor{green}{TTTAATTCCG}} \textcolor{green}{ ($13$)} GAAT\textit{\textcolor{green}{TTTAATTCCG}} \textcolor{green}{ ($13$)} GGAATTT\\
-100072199	T}
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}$>$MusMus	test	1	100072115	100072135 \\
+ \\
+\texttt{A\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TT	TA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\\
+\hspace*{1\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\\
+\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	TTT\\
+\hspace*{0\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{7\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\\
+}
 \\
+$>$MusMus	test1	1	100072115	100072135 \\
+ \\
+\texttt{A\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TT	TA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\\
+\hspace*{1\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\\
+\textit{\textcolor{red}{C}}	\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	TTT\\
+\hspace*{0\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{7\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\\
+}
 \\
 \end{document}
