--- a/examples/display/display/test1.tex
+++ b/examples/display/display/test1.tex
@@ -8,7 +8,7 @@
 \usepackage{array,multirow}
 \begin{document}
 \noindent
-\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}$>$MusMus	test	chr1	100072115	100072135 \\
+\newlength{\charwidth}\settowidth{\charwidth}{\texttt{A}}$>$MusMus	test1	chr1	100072115	100072135 \\
  \\
 \texttt{MusMus	A\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}	\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}	\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TT	TA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{C}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{G}}\textit{\textcolor{red}{A}}	\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}TTTA\textit{\textcolor{red}{A}}\textit{\textcolor{red}{T}}\textit{\textcolor{red}{T}}\\
 \hspace*{7\charwidth}\hspace*{1\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\hspace*{10\charwidth}\textit{\textcolor{red}{13.5}}\hspace*{1\charwidth}\\
