weblogo display included in genmot
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   TODO
	deleted:    examples/display/display/results.aux
	deleted:    examples/display/display/results.log
	deleted:    examples/display/display/results.pdf
	deleted:    examples/display/display/results.synctex.gz
	deleted:    examples/display/display/results.tex
	deleted:    examples/display/display/test.aux
	deleted:    examples/display/display/test.log
	deleted:    examples/display/display/test.pdf
	deleted:    examples/display/display/test.svg
	deleted:    examples/display/display/test.tex
	deleted:    examples/display/display/test1.aux
	deleted:    examples/display/display/test1.log
	deleted:    examples/display/display/test1.pdf
	deleted:    examples/display/display/test1.svg
	deleted:    examples/display/display/test1.tex
	deleted:    examples/display/texput.log
	deleted:    examples/extract/align/test-no-overlap_3L_4292719_4292819.fa
	deleted:    examples/extract/align/test-overlap_1_100072115_100072135.fa
	deleted:    examples/extract/align/test-overlap_3L_4292809_4292829.fa
	deleted:    examples/genmot/bestuniq-pval.dat
	deleted:    examples/genmot/coords-six-proms-short.dat
	deleted:    examples/genmot/coords-six-proms.dat
	deleted:    examples/genmot/motifs.txt
	modified:   scripts/python/Makefile.am
	new file:   scripts/python/weblogo-display.py.in
	modified:   src/Makefile.am
	modified:   src/genmot.cpp

--- a/TODO
+++ b/TODO
@@ -1,19 +1,13 @@
 Genmot : 
-weblogo display of motifs?
+
+Change convention from ATCG to ACGT?
 Display the consensus sequence for each motif, pvalue, frequency matrix, nb of conserved sites, non-conserved sites, nb found sites per base in the background
+Display like TRANSFAC
 Use a log2 base threshold
 
 Create scangen and modify the way enhancers are defined : consider a per motif instance list.
-
-Create imogene display:
-dislay svg
-display motif logo
-display matrix in a human readable fashion
-
-Compute densities with aligned background
 
 make imogene execute a python script when generating motif logos
 
 Marc:
 - check mcmc sampling process
--Add a simple script to launch background extraction
