--- a/README
+++ b/README
@@ -9,3 +9,8 @@ cd build
 Once the package is installed, the first thing to do is to download the required genomes. To help in that task, scripts have been added in the script folder.
 execute $prefix/bin/generate-droso-align.py (for drosophila genomes)
 Files will be automatically installed in $prefix/share/imogene
+
+
+*** Third-party software
+
+This package includes third party software in the folder mobyle. Please refer to the README file in that folder for more details.
